2020-08-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h: Fix inconsistent naming between struct
	and class jtag

2020-08-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Uwe Frank:
	patch #38 Patch to support XMEGA64A3
	* src/devdescr.cc (ATxmega64A3): New entry

2020-08-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Tobias Frost:
	patch #35 configure.ac overwrites variable if both ...
	* configure.ac: Avoid clobbering AM_CPPFLAGS

2018-10-15 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
	Submitted by Fabian Blaese:
	* src/devdescr.cc (ATmega48P, ATmega88P, ATmega168P,
	ATmega328P, ATtiny24, ATtiny44, ATtiny84): add addresses for
	IDR and SPMCR so software breakpoints will work

2018-10-15 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
	* doc/avarice.1: Update to match reality

2016-04-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2usb.cc (openhid): Correctly calculate the part
	of the (HID) serial number to compare with

2016-03-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2prog.cc (jtag2::eraseProgramMemory): bail out if
	running on debugWIRE
	* src/jtag3prog.cc (jtag3::eraseProgramMemory): (Dito.)

2016-03-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2rw.cc(jtag2::jtagWrite): omit chip erase when
	operating on debugWIRE
	* src/jtag3rw.cc(jtag3::jtagWrite): (Dito.)

2016-03-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag3.h: Mark jtag3::doSimpleJtagCommand() as throwing
	exceptions
	* src/jtag3rw.cc: (Dito.)

2016-03-02 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2usb.cc (hid_thread): Support packet fragmentation and
	assembly (for mEDBG).

2016-03-01 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2usb.cc: Determine max. transfer size from DAP_Info
	response

2016-02-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version date after merging jwunsch_edbg
	branch back into trunk

2016-02-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
